# lolesports

./: .env.template  .gitignore  API_REFERENCE.md  DEPLOYMENT.md  Dockerfile  FAQ.md  README.md  TROUBLESHOOTING.md  USER_MANUAL.md  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_enhanced_system.py
.kiro/specs/lol-match-notification-system/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: settings.py
data/: .gitkeep
src/: __init__.py
src/models/: __init__.py  match.py  notification.py  team.py  user.py
src/services/: __init__.py  data_manager.py  leaguepedia_api.py  notification_manager.py  scheduler_manager.py  telegram_api.py
src/ui/: __init__.py  management_page.py  matches_page.py  status_page.py  subscription_page.py
src/utils/: __init__.py  enhanced_logging.py  error_handler.py  logging_config.py  system_monitor.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  test_data.py
tests/integration/: test_api_integration.py  test_end_to_end_flow.py  test_error_scenarios.py  test_integration_suite.py  test_performance.py
tests/unit/: test_data_manager.py  test_leaguepedia_api.py  test_models.py  test_notification_manager.py  test_scheduler_manager.py  test_settings.py  test_telegram_api.py
